frontend: fix fullscreen button on smallscreen
- gap still isn't supported in qt chromium engine so we
  are behind version 84
- button with detail text broke when verifyaddress was added

--- a/frontends/web/src/components/fullscreen/fullscreen.css
+++ b/frontends/web/src/components/fullscreen/fullscreen.css
@@ -90,10 +90,12 @@
         align-items: stretch;
         flex-direction: column;
         flex-grow: 0;
-        gap: var(--space-half);
         justify-content: flex-end;
         margin-top: var(--space-half);
         padding-bottom: var(--space-half);
+    }
+    .buttons > *:not(:last-child) {
+        margin-bottom: var(--space-half);
     }
 }
 
